--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -123,6 +123,17 @@ a {
     transition: background .3s ease, color .3s ease;
 }
 
+.button_delete {
+    background: #8c4843;
+    border: none;
+    border-bottom: 2px solid #9b3e37;
+    color: white;
+    font-size: 1.4rem;
+    font-weight: 300;
+    padding: .8rem;
+    transition: background .3s ease, color .3s ease;
+}
+
 .button:hover {
     background: #5F3A87;
 }
